# cmake-rpath-test

./: CMakeLists.txt  main.c
